# scheduled-api-caller

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
.github/: labeler.yml
.github/workflows/: build.yaml  main.yaml  pull-requests.yaml  validate-python.yaml
caller/: __main__.py  caller.py  logging.py
charts/scheduled-api-call/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
charts/scheduled-api-call/templates/: _args.tpl  cron-job.yaml
test/config/: values.yaml
test/mocks/: Dockerfile  justfile  pyproject.toml
test/mocks/receiver/: __init__.py  __main__.py
test/unitish/: test_.py  test_argparsing.py
