[tool.poetry]
name = "generic-api-caller"
version = "0.1.0"
description = "Just an API caller"
authors = ["W Ross Morrow <morrowwr@gmail.com>"]
readme = "README.md"
packages = [{include = "caller"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
flatten-json = "^0.1.13"
ddtrace = "^2.7.6"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
types-requests = "^2.31.0.1"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = 'caller\/.*\.py$|test\/.*\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | generated
  )/
)
'''

[tool.isort]
src_paths = ["app", "tests"]
profile = "black"
line_length = 120
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
extend_skip = "generated"
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true # flask_httpauth
exclude = ["venv", ".venv"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 30
